# codex-compaction-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  llms.txt
.github/workflows/: ci.yml
config/: hooks.template.json
docs/: ARCHITECTURE.md  LLM_INSTALL.md  LLM_INSTALL_RU.md
scripts/: install.sh  uninstall.sh  verify.sh
src/: main.rs
tests/: test_hook_lifecycle.py  test_hook_ownership.sh
